# lightning-futures

./: .gitignore  README.md
src/: CMakeLists.txt  CMakePresets.json  evaluate.ini  log.ini  runtime.ini
src/adapter/: CMakeLists.txt  interface.cpp
src/adapter/market/: ctp_api_market.cpp  ctp_api_market.h  ctp_market.cpp  ctp_market.h  tap_api_market.cpp  tap_api_market.h
src/adapter/trader/: CMakeLists.txt  ctp_api_trader.cpp  ctp_api_trader.h  ctp_trader.cpp  ctp_trader.h  tap_api_trader.cpp  tap_api_trader.h
src/core/: CMakeLists.txt  bar_generator.cpp  bar_generator.h  condition.cpp  condition.h  context.cpp  context.h  csv_recorder.cpp  csv_recorder.h  data_channel.cpp  delayed_distributor.cpp  delayed_distributor.h  driver.h  evaluate.cpp  evaluate.h  evaluate_context.cpp  evaluate_context.h  exec_ctx.cpp  exec_ctx.h  lightning.cpp  log_wapper.cpp  nanolog.cpp  pod_chain.cpp  pod_chain.h  price_step.h  rl_env.cpp  rl_env.h  runtime.cpp  runtime.h  runtime_context.cpp  runtime_context.h  strategy.cpp  strategy.h  time_section.cpp  time_section.h  trading_context.cpp  trading_section.cpp  trading_section.h
src/core/dll_mgr/: dll_mgr.h  market_api_dll_mgr.cpp  market_api_dll_mgr.h  recorder_dll_mgr.cpp  recorder_dll_mgr.h  simulator_dll_mgr.cpp  simulator_dll_mgr.h  trader_api_dll_mgr.cpp  trader_api_dll_mgr.h
src/core/driver/: evaluate_driver.cpp  evaluate_driver.h  runtime_driver.cpp  runtime_driver.h
src/enc_temp_folder/1fca79fc5d45fbc3dc48e19e8c1b12/: gallop.cpp
src/enc_temp_folder/2f1288a2edc0a2de8c01b91f86cf399/: hft_3_strategy.h
src/enc_temp_folder/57ffa7ac6a6d0628fa23f113403ff5/: hft_3_strategy.cpp
src/example/: CMakeLists.txt  arbitrage_strategy.cpp  arbitrage_strategy.h  demo_dlstgy.cpp  demo_ltd.cpp  dlstgy_demo.cpp  evaluate.cpp  evaluate.h  evaluate_demo.cpp  example.cpp  gui_demo.cpp  ltds_demo.cpp  manual.cpp  manual_demo.cpp  marketing_strategy.cpp  marketing_strategy.h  orderflow_strategy.cpp  orderflow_strategy.h  runtime.cpp  runtime_demo.cpp
src/example/demo/: demo.cpp  demo.h
src/example/strategy/: arbitrage_strategy.cpp  arbitrage_strategy.h  gui_bridge_strategy.cpp  gui_bridge_strategy.h  klineview_strategy.cpp  klineview_strategy.h  marketing_strategy.cpp  marketing_strategy.h  orderflow_strategy.cpp  orderflow_strategy.h  replace_strategy.cpp  replace_strategy.h
src/framework/: CMakeLists.txt  bar_generator.cpp  bar_generator.h  context.cpp  csv_recorder.cpp  csv_recorder.h  engine.cpp  engine.hpp  evaluate.hpp  evaluate_engine.cpp  price_step.cpp  price_step.h  runtime.hpp  runtime_engine.cpp  strategy.cpp  strategy.hpp  trading_section.cpp  trading_section.h
src/gallop/: CMakeLists.txt  config.h  demo_strategy.cpp  demo_strategy.h  dm_strategy.cpp  dm_strategy.h  emg_1_strategy.cpp  emg_1_strategy.h  emg_1b_strategy.cpp  emg_2_strategy.cpp  emg_2_strategy.h  gallop.cpp  gallop.h  hcc_strategy.cpp  hcc_strategy.h  hft_1_strategy.cpp  hft_1_strategy.h  hft_2_strategy.cpp  hft_2_strategy.h  hft_2a_strategy.cpp  hft_2a_strategy.h  hft_2b_strategy.cpp  hft_2b_strategy.h  hft_3_strategy.cpp  hft_3_strategy.h  pugixml.cpp  pugixml.hpp  strategy.cpp  time_utils.hpp  trading_day.h
src/gallop/strategy/: demo_strategy.cpp  demo_strategy.h  emg_1_strategy.cpp  emg_1_strategy.h  emg_1a_strategy.cpp  emg_1a_strategy.h  emg_1b_strategy.h  emg_2_strategy.cpp  emg_2_strategy.h  (+5 more)
src/include/: atomic_pool.hpp  basic_define.h  basic_types.hpp  basic_utils.hpp  context.h  data_channel.h  data_types.hpp  define.h  define_types.hpp  dll_helper.hpp  driver.h  engine.h  engine_types.hpp  evaluate_engine.h  event_center.hpp  library_define.h  lightning.h  log_define.hpp  log_wapper.h  log_wapper.hpp  memory_pool.hpp  mmf_wapper.hpp  mpsc_queue.hpp  notify.h  params.hpp  pod_chain.h  receiver.h  ringbuffer.hpp  runtime_engine.h  save_s.hpp  strategy.h  stream_buffer.hpp  string_helper.hpp  time_utils.hpp  trading_context.h
src/log/: CMakeLists.txt  log_wapper.cpp  nanolog.cpp  nanolog.hpp
src/loger/: CMakeLists.txt  log_wapper.cpp  nanolog.cpp  nanolog.hpp
src/logger/: CMakeLists.txt  log_context.cpp  log_context.h  log_wapper.cpp  nanolog.cpp  nanolog.hpp
src/ltpp/: CMakeLists.txt  engine.cpp  evaluate_engine.cpp  evaluate_engine.h  runtime_engine.cpp  runtime_engine.h  strategy.cpp  strategy.h  strategy_manager.cpp  strategy_manager.h
src/ltpy/: CMakeLists.txt  ltpy.cpp  ltpy.h
src/market/: CMakeLists.txt  ctp_market.cpp  ctp_market.h  interface.cpp  interface.h
src/persist/: CMakeLists.txt  mmf_wapper.cpp
src/pybind/: CMakeLists.txt  apitest.cpp  bridge.cpp  bridge.h  pyapi.cpp
src/recorder/: CMakeLists.txt  csv_recorder.cpp  csv_recorder.h  interface.cpp  recorder_proxy.cpp  recorder_proxy.h
src/share/: atomic_pool.hpp  cpu_helper.hpp  crontab_scheduler.hpp  define.h  dll_helper.hpp  encode_helper.hpp  event_center.hpp  file_wapper.hpp  interface.h  library_helper.hpp  log_wapper.hpp  market_api.h  memory_pool.hpp  mpsc_queue.hpp  platform_helper.hpp  process_helper.hpp  recorder.h  ringbuffer.hpp  shared_types.h  simulator.h  spin_mutex.hpp  string_helper.hpp  tick_loader.h  time_utils.hpp  trader_api.h
src/simulator/: CMakeLists.txt  contract_parser.cpp  contract_parser.h  interface.cpp  interface.h  market_simulator.cpp  market_simulator.h  order_container.cpp  order_container.h  position_container.cpp  position_container.h  tick_loader.h  tick_simulator.cpp  tick_simulator.h  trader_simulator.cpp  trader_simulator.h
src/trader/: CMakeLists.txt  ctp_trader.cpp  ctp_trader.h  interface.cpp  interface.h
test/: CMakeLists.txt  TESTING_GUIDE.md  convert_to_utf8.ps1  run_tests.bat  run_tests.ps1  run_tests_simple.ps1  test_basic_types.cpp  test_basic_utils.cpp  test_compiler.cpp  test_coverage_analysis.md  test_crontab_scheduler.cpp  test_event_center.cpp  test_fix.cpp  test_memory_pool.cpp  test_params.cpp  test_position_fix.cpp  test_ringbuffer.cpp  test_simulator_fix.cpp  test_stream_buffer.cpp  test_string_helper.cpp  test_time_section.cpp  test_time_utils.cpp  test_trader_simulator.cpp  test_trading_context.cpp
(+61 files in other folders)
